# FasterQuicker

./: README.md
DontStopMovingMaster/: CMakeLists.txt
DontStopMovingMaster/DontStopMoving/Src/App/: main.cpp
DontStopMovingMaster/DontStopMoving/Src/Controller/: Controller.cpp  Controller.h
DontStopMovingMaster/DontStopMoving/Src/Math/: Rectangle.h
DontStopMovingMaster/DontStopMoving/Src/Render/: Text.cpp  Text.h  Window.cpp  Window.h
DontStopMovingMaster/DontStopMoving/Src/Sounds/: Sound.cpp  Sound.h
