cmake_minimum_required(VERSION 3.30)
set(CMAKE_CXX_STANDARD 20)
set(CMKAE_CXX_STANDARD_REQUIRED ON)

project(FasterQuicker VERSION 1.0)
add_executable(FasterQuicker DontStopMoving/Src/App/main.cpp)
target_include_directories(FasterQuicker PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} DontStopMoving/Src)
target_include_directories(FasterQuicker PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} Deps/OPENAL/Include)
target_link_libraries(FasterQuicker PUBLIC Deps/OPENAL/Lib/OpenAL32)
target_include_directories(FasterQuicker PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} Deps/LIBSND/Include)
target_link_libraries(FasterQuicker PUBLIC Deps/LIBSND/Lib/sndfile)
target_include_directories(FasterQuicker PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} Deps/SDL/Include)
target_link_libraries(FasterQuicker PUBLIC Deps/SDL/lib/x64/SDL2)
target_link_libraries(FasterQuicker PUBLIC Deps/SDL/lib/x64/SDL2main)
target_include_directories(FasterQuicker PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} Deps/SDLImage/Include)
target_link_libraries(FasterQuicker PUBLIC Deps/SDLImage/lib/x64/SDL2_image)
target_include_directories(FasterQuicker PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} Deps/SDLText/Include)
target_link_libraries(FasterQuicker PUBLIC Deps/SDLText/lib/x64/SDL2_ttf)